Fix video codec labels

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-video-download-as.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-video-download-as.html
@@ -234,11 +234,11 @@
                         return [
                             {
                                 id: "libx264",
-                                label: "x264"
+                                label: "H264"
                             },
                             {
                                 id: "libx265",
-                                label: "x265"
+                                label: "H265"
                             },
                             {
                                 id: "libvpx-vp9",
