--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-image-download-as.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-image-download-as.html
@@ -113,6 +113,14 @@
                                                    result-formatter="[[thumbnailFormatter]]"
                                                    headers="[[watermarkSuggestionHeaders]]">
                         </nuxeo-document-suggestion>
+                        <div role="widget">
+                            <label>[[i18n('label.action.transform.watermark.gravity')]]</label>
+                            <nuxeo-select role="widget"
+                                          name="format"
+                                          placeholder="[[i18n('label.action.transform.watermark.gravity')]]"
+                                          options="[[watermarkGravityOptions]]" selected="{{watermarkGravity}}">
+                            </nuxeo-select>
+                        </div>
                     </form>
                 </iron-form>
 
@@ -227,7 +235,8 @@
                     width: this.width,
                     height: this.height,
                     textWatermark: this.textWatermark,
-                    watermarkId: this.watermarkDocumentId
+                    watermarkId: this.watermarkDocumentId,
+                    watermarkGravity: this.watermarkGravity
                 };
 
                 if (this._isJpeg(this.format)) {
